--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Felicitaciones</title>
+    <link rel="stylesheet" href="sonrie.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="grid">
+            <div class="grid-item" data-sin="reciba su premio">reciba su premio</div>
+            <div class="grid-item" data-sin="se que es dificil de creer">se que es dificil de creer</div>
+            <div class="grid-item" data-sin="ahora puede decirle a sus amigos">ahora puede decirle a sus amigos</div>
+            <div class="grid-item" data-sin="usted es el lector">usted es el lector</div>
+            <div class="grid-item" data-sin="si sonrie">Si sonrie</div>
+        </div>
+        <div class="sin-info">
+            <h2 id="sin-title">Selecciona uno</h2>
+            <p id="sin-description">y haz clic para ver más información.</p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
-</html> 
+</html>
